review: Unit 20-1, Unit 15-2, Unit 18-1

--- a/english/word/low-frequency/009-016.md
+++ b/english/word/low-frequency/009-016.md
@@ -153,7 +153,8 @@
     - n. 牧师
 - enlightenment
     - n. 启蒙
-    - An Answer to the Question： What is Enlightenment？ It was the purpose and responsibility of great minds to go forth and seek out the truth，which they believed to be founded In knowledge.
+    - An Answer to the Question： What is Enlightenment？ It was the purpose and responsibility of great minds to go forth
+      and seek out the truth，which they believed to be founded In knowledge.
     - enlighten
 - plunge
     - vi. 陷入
@@ -192,7 +193,8 @@
     - vt. 最终确定（计划、协议等）
 - scold
     - vt. 责骂
-    - In the 2006 film version of The Devil Wears Prada，Miranda Priestly，played by Meryl Streep，scolds her unattractive assistant for imagining that high fashion doesn't affect her.
+    - In the 2006 film version of The Devil Wears Prada，Miranda Priestly，played by Meryl Streep，scolds her unattractive
+      assistant for imagining that high fashion doesn't affect her.
         - scold sb. for sth.
     - == criticize
     - blame 责备
@@ -221,14 +223,17 @@
 
 - suitability
     - n. 适合性
-    - unsuitable adj. 不合适的
+    - unsuitable
+        - adj. 不合适的
+        - The *rides(游乐园的游乐设施)* are **unsuitable** for people of a *nervous(adj. 焦虑的)* disposition.
 - subordinate
     - n. 下级
 - counsellor
     - n. 顾问
 - counsel
     - vt. （正式）建议
-    - Trade publications counselled department stores that，In order to increase sales，they should create a "third stepping stone" between infant wear and older kids' clothes.
+    - Trade publications counselled department stores that，In order to increase sales，they should create a "third
+      stepping stone" between infant wear and older kids' clothes.
 - regional
     - adj. 地区的
 - accumulate
