--- a/math/advanced-mathematics/Limits-and-Continuity-of-Functions/Concept-and-Properties-of-Functions.tex
+++ b/math/advanced-mathematics/Limits-and-Continuity-of-Functions/Concept-and-Properties-of-Functions.tex
@@ -148,6 +148,12 @@
             \item $f[\psi(x)]$内偶则偶，内奇同外
             \item $\color{red}{\bigstar}$求导一次，奇偶性互换
             \item 设对任意的$x, y$，都有$f(x + y) = f(x) + f(y)$，则$f(x)$是奇函数
+            \item 常见的奇函数
+            \begin{enumerate}
+                \item $f(x) = \ln\displaystyle\frac{1-x}{1+x} = \ln(1-x) - \ln(1+x)$
+                \item $f(x) = \displaystyle\frac{1}{2^x + 1} - \frac{1}{2}$
+            \end{enumerate}
+            \item 常见的偶函数
         \end{itemize}
         \item 反正弦函数 $y=\arcsin x$ 是函数
         \[
@@ -267,7 +273,7 @@
         特别地，当 $n=1$ 时，$[x + 1] = [x] + 1$
     \end{enumerate}
 
-    \subsection{方法步骤}
+    \subsection{方法总结}
 
     \begin{enumerate}
 
