--- a/english/word/low-frequency/001-008.md
+++ b/english/word/low-frequency/001-008.md
@@ -22,10 +22,11 @@
 - expire
     - vi.（正式文件）到期
     - -spir- 气
-    - inspire 鼓励，鼓舞
-    - aspire 立志，渴望
+    - Aspire to inspire before we expire.
+    - inspire vt. 鼓舞；激励；是...的灵感来源；使产生（情感）
+    - aspire v. 渴望
 - mentality
-    - n. （尤指被视为错误的）心态
+    - n. 心态
     - mental health
 - bend
     - v. 使倾斜
@@ -33,14 +34,15 @@
     - adj. 不拥挤的
 - unsurpassed
     - adj. 无比的，卓越的
-    - <ins>Rested in (坐落于)</ins> the Pacific Ocean, Mauna Kea's <ins>peak (山峰)</ins> <ins>rises above (上升)</ins>
-      the bulk of our planet's dense atmosphere，where conditions allow telescopes to obtain images of **unsurpassed**
-      clarity
+    - Rested in the Pacific Ocean, Mauua Kea's peak <ins>rises above(高于、超出)</ins>
+      <ins>the bulk of(...的大部分)</ins> our *planet(n. 行星)*'s <ins>dense atmosphere(稠密的大气)</ins>, where
+      conditions allow telescopes to obtain images of **unsurpassed** clarity.
 - elevation
     - n. 提升
     - elevator n. 电梯
 - attorney
     - n. 律师
+    - lawyer n. 律师
 - fluency
     - n.（语言）流利
 - reversible
@@ -54,10 +56,10 @@
     - adj. 惊吓的
 - thrift
     - n. 节省
-    - Thrift means being very careful about how much money you spend.
-    - Thrift has become the prevailing practice.
+    - **Thrift** means being very careful about how much money you spend.
+    - **Thrift** has become the prevailing practice.
 - unflattering
-    - adj. 贬损的
+    - adj. 贬损的 😔
     - Facebook is a self-enhancer's paradise because people can <ins>withhold (隐瞒)</ins> their unflattering sides.
     - flattered 感到满意的，受宠若惊的
 - disbelief
@@ -65,18 +67,18 @@
 - shorthand
     - n. 速记（法）
 - inequity
-    - n. 不公正
+    - n. 不公正 😔
+    - Social imbalance worries him more than **inequity** of income.
 - craftsman
     - n. 工匠
-    - craftsmanship 工匠精神
+    - craftsmanship spirit 工匠精神
 - verbally
     - adv. 口头地
 - bloody
     - vt. 使流血
 - withstand
-    - vt. 承受
-    - She failed to withstand the stresses and strains of public life.
-    - Social imbalance worries him more than inequity of income.
+    - vt. 承受 😔
+    - She failed to **withstand** the stresses and strains of public life.
 
 ## 003
 
@@ -89,6 +91,7 @@
     - n. 有用
 - dentistry
     - n. 牙科学
+    - dentist [ˈdentɪst] n. 牙科医生
 - dissatisfied
     - adj. 不满意的
     - be dissatisfied with 对...不满意
@@ -99,24 +102,23 @@
     - n. 预期
 - apprehension
     - n. 理解
-    - reading apprehension
-    - comprehension
+    - comprehension [ˌkɑːmprɪˈhenʃn] n. 理解
 - aggressively
     - adv. 挑衅的
-    - aggressive 好斗的，进取心
-- aggressiveness
-    - n. 进取精神
+    - aggressive [əˈɡresɪv] adj. 好强的🙂; 攻击性强的 😔
+    - aggressiveness n. 进取精神
 
 ## 004
 
 - drone
-    - n. 雄蜂，无人机
+    - n. 无人机；雄蜂
     - invisible drone 隐形战机
 - fertiliser
     - n. 肥料
     - artificial fertiliser 人造肥料
 - swell
-    - v. 使增多； n. 肿胀
+    - v. 使增多
+    - n. 肿胀
 - tribute
     - n. 贡品
 - confusedly
@@ -126,7 +128,9 @@
 - uneven
     - adj. 不均匀的，不平坦的，不平等的
     - an even playing field 一个公平的竞技场
-        - even 公平的
+    - even
+        - adv. 甚至
+        - adj. 均匀的；公平的
 - mammal
     - n. （脊椎）哺乳动物
 - unworthy
@@ -141,17 +145,18 @@
     - adj. 按时间计算的
 - moderately
     - adv. 适度地
-    - Share prices on the Tokyo Exchange declined moderately.
+    - Share prices on the Tokyo Exchange declined **moderately**.
 - occasional
     - adj. 偶然的
-    - I enjoy the occasional glass of wine.
+    - == from time to time
+    - I enjoy the **occasional** glass of wine.
 - multidimensional
     - adj. 多维的
 - stubbornly
     - adv. 顽固地
 - landmark
     - n. 里程碑
-    - In the landmark 1975 decision Taylor v. Louisiana，the Supreme Court extended the requirement that juries be
+    - In the **landmark** 1975 decision Taylor v. Louisiana, the Supreme Court extended the requirement that juries be
       representative of all parts of the community to the state level.
         - extend A to B 延伸到
 - formative
@@ -162,8 +167,8 @@
     - adj. 便携式的
 - disciplinary
     - adj. 学科的；纪律的
-    - The school has a reputation for high standards of discipline.
-    - Our weekly reading groups provided another chance for discussing multi-disciplinary ideas.
+    - The school has a reputation for high standards of **discipline**.
+    - Our weekly reading groups provided another chance for discussing multi-**disciplinary** ideas.
 
 ## 006
 
@@ -173,10 +178,12 @@
     - vt. 歪曲
 - procedurally
     - adv. 在程序上
-    - procedure n. 程序
+    - procedure n. 手续；（商业、法律或政治上的）程序
 - grace
     - n. 优雅
-    - She dose everything with style and grace.
+    - elegance n. 优雅
+    - **Grace** commonly refers to a smooth and pleasing way of moving, or a polite and thoughtful way of behaving.
+    - She does everything with <ins>style and **grace**(优雅得体)</ins>.
 - narrative
     - n. 叙事
 - mightily [ˈmaɪtli]
@@ -185,26 +192,29 @@
     - That framework has contributed **mightily** to our broken immigration system.
 - ironically
     - adv. 讽刺地
-    - ironic n. 讽刺
+    - ironic [aɪˈrɑnɪk] adj. 反语的；讽刺的
 - readmit
     - vt. 重新接纳
 - individualism
     - n. 个人主义
-- individually
-    - adv. 单独地
-    - The hotel has 100 individually designed bedrooms.
+    - individually
+        - adv. 单独地
+        - The hotel has 100 **individually** designed bedrooms.
 
 ## 007
 
 - decider
     - n. 决定者
-- decisive
-    - adj. 决定性的
-    - This is a time of decisive action and quick thinking.
+    - decide [dɪˈsaɪd] v. 决定
+    - decisive
+        - adj. 决定性的; 明确的; 决断的
+        - This is a time of **decisive** action and quick thinking.
 - agonizing
     - adj. 令人痛苦的
-    - It was the most agonizing decision of her life.
-    - agony n. 痛苦
+    - It was the most **agonizing** decision of her life.
+    - agony
+        - n. 痛苦
+        - == pain
 - livestream
     - n. 网络直播
 - tick
@@ -215,13 +225,13 @@
     - n. 老兵
 - irregular
     - adj. 无规律的
-    - We never engage In irregularities.
-    - regularity 常规的
+    - We never engage in **irregularities**. 我们决不搞歪的斜的
+    - regularity n. 规律性
 - noisiness
     - n. 吵闹
 - manifestation
     - n. 表现
-    - Some manifestation of your concern would have been appreciated.
+    - Some **manifestation** of your concern would have been appreciated.
 
 ## 008
 
@@ -231,13 +241,18 @@
     - n. 收件箱
 - partial
     - adj. 部分的
+    - biased
+        - adj. 偏见的
+        - unbiased 🙂 [ʌnˈbaɪəst] adj. 无偏见的；公正的
     - partiality n. 不公平
-    - biased adj. 偏见的
+        - favoritism ['feɪvərɪtˌɪzəm] n. 偏袒
     - impartially adv. 公平地
 - inventor
     - n. 发明者
 - advisory
     - adj. 顾问的
+    - Giovanni Parmigiani, a biostatistician at the Harvard School of Public Health, a member of the SBoRE group, says
+      he expects the board to "play primarily an **advisory** role".
 - consultant
     - n. 顾问
     - consultancy n. 咨询公司
