--- a/english/word/low-frequency/033-040.md
+++ b/english/word/low-frequency/033-040.md
@@ -151,6 +151,7 @@
 - conquer
     - vt. 征服
     - == overcome/defeat
+    - He who **conquers** others is strong; He who **conquers** himself is mighty.
 - whisper
     - v. 低语
 
@@ -218,6 +219,7 @@
     - vt. 叙述
 - untested
     - adj. 未经实验（或考验）的
-    - The supposed importance of influentials derives from a plausible-sounding but largely untested theory called the "two step flow of communication."
+    - The supposed importance of influentials derives from a plausible-sounding but largely untested theory called the "
+      two step flow of communication."
 - indulgent
     - adj. 纵容的
