--- a/english/word/low-frequency/009-016.md
+++ b/english/word/low-frequency/009-016.md
@@ -17,16 +17,20 @@
 - C: Cause
 - R: Result
 
+## 009
+
 - vastly
     - adv. 非常
 - empathy
-    - n. 同情，同理心，感同身受
-    - Besides，empathy can be a cure for loneliness and sadness.
-    - sympathy n. 同情心，赞同
-        - I have some sympathy with this <ins>point of view (观点)</ins>.
+    - n. 同理心，共鸣，同情；感同身受
+    - Besides, **empathy** can be a cure for loneliness and sadness.
+    - sympathy
+        - n. 支持，赞同；同情
+        - I have some **sympathy** with this <ins>point of view(观点)</ins>.
 - hedge
     - vi. 防备（尤指金钱损失）
-    - The Bilski case involves a claimed patent on a method for <ins>hedging risk (对冲风险)</ins> In the energy market.
+    - The Bilski case involves a claimed patent on a method for <ins>**hedging** risk(对冲风险)</ins> in the energy
+      market.
 - suicide
     - n. 自杀
     - commit suicide
@@ -34,13 +38,14 @@
     - n. 机智
 - entrepreneurship
     - n. 创业精神
-    - Entrepreneurship has risks. Startups do fail.
+    - **Entrepreneurship** has risks. Startups do fail.
 - erroneous
     - adj. （观念或资料）错误的
-    - Proper measures were taken as soon as the errorneous ideas cropped up.
-    - error
+    - Proper measures were taken as soon as the **erroneous** ideas cropped up.
+    - error n. 错误，差错
 - appropriately
     - adv. 适当的
+    - == proper
 - unpredictable
     - adj. 不可预测的
 - wherever
@@ -50,27 +55,28 @@
 
 - unsustainability
     - n. 不可持续性
-    - In a world of scare resources,globalization without new technology is unsustainable.
+    - In a world of scare resources, globalization without new technology is unsustainable.
     - sustainable development 可持续发展
 - inability
     - n. 无力
-    - In inability to do sth. 无力做某事
+    - in inability to do sth. 无力做某事
 - fascination
     - n. 迷恋
-    - == obsession 😔
+    - == obsession n. 迷恋 😔
 - scrap
     - vt. 抛弃
+    - n. 碎片
 - apt
     - adj. 有...倾向
-    - be apt to 倾向于
-    - == turn to do sth 倾向于做某事
-    - == be likely to do sth.
-    - She was apt to raise her voice and wave her hands about.
-    - She had taught him French and he had been an <ins>apt (聪慧的)</ins> students.
+    - be apt to do 倾向于
+        - == tend to do sth 倾向于做某事
+        - == be likely to do sth.
+    - She was **apt** to raise her voice and wave her hands about.
+    - She had taught him French and he had been an <ins>**apt**(adj. 聪慧的)</ins> students.
 - culprit
-    - n. 引起问题的人（或事物）
-    - The police followed home the clue and finally caught the <ins>culprit (罪犯)</ins>.
-    - Financial needs aren't the only <ins>culprit (原因)</ins> for the "unretirement" trend.
+    - n. 引起问题的人（或事物）；罪犯
+    - The police followed home the clue and finally caught the **culprit**.
+    - Financial needs aren't the only **culprit/reason/cause** for the "unretirement" trend.
 - flexibly
     - adv. 灵活地
 - rectify
@@ -93,12 +99,15 @@
 - disapprove
     - vi. 不赞成
     - disapprove/approve of sth.
-    - approve 赞成
+    - approve
+        - vi. 同意
+        - vt. 批准
 - duration
     - n. 持续时间
 - prudence
     - n. 谨慎
     - consider the pros and cons.
+    - **Prudence** is the virtue by which we discern what is proper to do under various circumstances in time and place.
     - prudently adv. 谨慎地
 - needlessness
     - n. 不必要
@@ -111,10 +120,12 @@
 - idealist
     - n. 理想主义者
     - ideally adv. 理想地
-    - idealism n. 理想主义
-    - When you're idealistic,you dream of perfection,whether in yourself or other people.
+    - idealism
+        - n. 理想主义
+        - **Idealism** leads to realism if it is strictly thought out.
+    - When you're idealistic, you dream of perfection, whether in yourself or other people.
         - optimism n. 乐观主义
-- Input
+- input
     - vt. 把（数据等）输入计算机
 - instability
     - n. （形势）不稳定
@@ -124,9 +135,9 @@
     - adj. 大陆的
 - unrecognized
     - adj. 未被意识到的
-    - The trend in sports,though,may be obscuring an unrecognized reality:Amercians have generally stopped growing.
-        - obscure adj. 模糊不清的； v. 使模糊
-        - Americans have reached their genetic growth limit.
+    - The trend in sports,though, may be obscuring an **unrecognized** reality: Americans have generally stopped
+      growing.
+        - obscure adj. 鲜为人知的；费解的
 - instructive
     - adj. 有启发性的
     - instruct sb. to do sth.
@@ -141,10 +152,10 @@
     - adv. 合作地
 - unforeseen
     - adj. 意外的
-    - Do you feel anxious when <ins>unforeseen incidents (意外)</ins> intrude on your day？
+    - Do you feel anxious when **unforeseen** incidents intrude on your day？
 - competence
     - n. 能力；胜任
-    - The judge has to act within the competence of the court.
+    - The judge has to act within the **competence** of the court.
     - incompetence n. 无能力
     - incompetent adj. 无能力的
 - clinical
@@ -153,9 +164,9 @@
     - n. 牧师
 - enlightenment
     - n. 启蒙
-    - An Answer to the Question： What is Enlightenment？ It was the purpose and responsibility of great minds to go forth
-      and seek out the truth，which they believed to be founded In knowledge.
-    - enlighten
+    - An Answer to the Question: What is **Enlightenment**? It was the purpose and responsibility of great minds to go
+      forth and seek out the truth, which they believed to be founded In knowledge.
+    - enlighten v. 启发
 - plunge
     - vi. 陷入
     - plunge into 使（某人或某物陷入）
@@ -164,26 +175,29 @@
 
 - mighty
     - adj. 强有力的
-    - He who conquers others is strong；He who conquers himself is mighty.
+    - He who conquers others is strong; He who conquers himself is **mighty**.
     - might n. 力量
 - tuck
     - vt. 塞进
 - exclusion
     - n. 排斥
+    - An **exclusion** is an instance of leaving something or some out.
     - to the exclusion of
-        - Dine had dedicated her life to caring for him to the exclusion of all else.
+    - If you love someone <ins>to the **exclusion** of</ins> all others, he or she is the only one for you!
+    - Dine had dedicated her life to caring for him <ins>to the **exclusion** of</ins> all else.
     - exclusionary adj. 排他的
-    - inclusive adj. 包容的
+    - inclusive adj. 包容性强的；包括的
 - deter
     - vt. 制止
 - extraction
-    - n. 血统
+    - n. 血统；取出；提炼
 - depiction
     - n. 描写
 - erect
     - vt. 建立
 - intently
     - adv. 专心地
+    - Get the facts. Ask questions and listen **intently** to the answers before responding.
 - forthcoming
     - adj. 即将发生（或出版等）的
 
@@ -193,23 +207,25 @@
     - vt. 最终确定（计划、协议等）
 - scold
     - vt. 责骂
-    - In the 2006 film version of The Devil Wears Prada，Miranda Priestly，played by Meryl Streep，scolds her unattractive
-      assistant for imagining that high fashion doesn't affect her.
+    - In the 2006 film version of The Devil Wears Prada, Miranda Priestly, played by Meryl Streep, **scolds** her
+      unattractive assistant for imagining that high fashion doesn't affect her.
         - scold sb. for sth.
-    - == criticize
-    - blame 责备
+    - == criticize ['krɪtəˌsaɪz] vt. 批评
+    - blame
+        - vt. 把...归咎于
+        - n. （坏事或错事）的责任
 - personalised
     - adj. 个人化的
 - silliness
     - n. 愚蠢
-    - silly
+    - silly [ˈsɪli] adj. 傻的，糊涂的
 - penalise
     - vt. 惩罚
-    - penalty n.
+    - penalty n. 惩罚；刑罚
 - complimentary
     - adj. 赞赏的
-    - == favorable
-    - compliment
+    - == favorable adj. 赞同的
+    - compliment n. 称赞
 - massacre
     - n. 大屠杀，（比赛中的）惨败😔
 - sphere
@@ -228,12 +244,13 @@
         - The *rides(游乐园的游乐设施)* are **unsuitable** for people of a *nervous(adj. 焦虑的)* disposition.
 - subordinate
     - n. 下级
+    - adj. 次要的；下级的
 - counsellor
     - n. 顾问
-- counsel
-    - vt. （正式）建议
-    - Trade publications counselled department stores that，In order to increase sales，they should create a "third
-      stepping stone" between infant wear and older kids' clothes.
+    - counsel
+        - vt. （正式）建议
+        - Trade publications **counselled/advised** department stores that, in order to increase sales, they should
+          create a "third stepping stone" between infant wear and older kids' clothes.
 - regional
     - adj. 地区的
 - accumulate
@@ -243,3 +260,18 @@
     - professionalisation n. 职业化
 - telecommunication
     - n. 电讯
+
+## Words
+
+- violent
+    - adj. 暴力的；猛烈的
+- sole [soʊl]
+    - adj. 唯一的，仅有的
+- rigid [ˈrɪdʒɪd]
+    - adj. 过于严格的；死板的
+- prosperous
+    - adj. 繁荣的，兴旺的; 富裕的; 幸福的，运气好的; 良好的
+
+## 词组
+
+## 句式
