feat: add Advanced-Mathmatics README

--- a/math/advanced-mathematics/Foundations/inequality.tex
+++ b/math/advanced-mathematics/Foundations/inequality.tex
@@ -121,6 +121,7 @@
         \]
         注: $\color{red}{(a_1^2 + a_2^2)(b_1^2 + b_2^2) \geq (a_{1}b_{1} + a_2 b_2)^2}$
         \item Bernoulli（伯努利）不等式: $(1+x)^n \ge 1 + nx, x > -1$
+        \item
 
     \end{enumerate}
 
