--- a/math/advanced-mathematics/Limits-and-Continuity-of-Functions/Concept-and-Properties-of-Function-Limits.tex
+++ b/math/advanced-mathematics/Limits-and-Continuity-of-Functions/Concept-and-Properties-of-Function-Limits.tex
@@ -272,7 +272,11 @@
             \item $\tan x - \sin x = \tan x(1 - \cos x) \sim \displaystyle\frac{1}{2}x^3$
         \end{itemize}
 
-        \item 当$x \to 0^+$时，$(1 + x)^{\displaystyle\frac{1}{x}} - e \sim -\displaystyle\frac{e}{2}x$
+        \item 当$x \to 0^+$时，$(1 + x)^{\displaystyle\frac{1}{x}} - e \sim -\displaystyle\frac{e}{2}x \Rightarrow (1 + \text{狗})^{\displaystyle\frac{1}{\text{狗}}} - e \sim -\displaystyle\frac{e}{2}\text{狗}$
+        \begin{itemize}
+            \item 当$n \to \infty$时，若$(1 + \displaystyle\frac{1}{n})^n - e$与$\displaystyle\frac{a}{n}$是等价无穷小，则$a = -\displaystyle\frac{e}{2}$
+            \item 当$n \to \infty$时，$(1 + \displaystyle\frac{1}{n})^n - e \sim -\displaystyle\frac{e}{2}\cdot\frac{1}{n}$
+        \end{itemize}
     \end{enumerate}
 
     \subsection{结论}
